--- a/trunk/mscore/mscore/prefsdialog.ui
+++ b/trunk/mscore/mscore/prefsdialog.ui
@@ -408,10 +408,10 @@
          </property>
          <layout class="QHBoxLayout">
           <property name="spacing">
-           <number>3</number>
+           <number>9</number>
           </property>
           <property name="margin">
-           <number>3</number>
+           <number>9</number>
           </property>
           <item>
            <widget class="QLabel" name="label_25">
@@ -497,8 +497,14 @@
          <property name="title">
           <string>OSC remote control</string>
          </property>
+         <property name="flat">
+          <bool>false</bool>
+         </property>
          <property name="checkable">
           <bool>true</bool>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_9">
           <item>
@@ -1544,6 +1550,9 @@
             <property name="text">
              <string>Style for Part:</string>
             </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
            </widget>
           </item>
           <item row="2" column="1">
@@ -2230,7 +2239,7 @@
           </size>
          </property>
          <property name="title">
-          <string>Choose PortMidi input interface</string>
+          <string>Choose MIDI input interface</string>
          </property>
          <property name="flat">
           <bool>false</bool>
