--- a/trunk/mscore/mscore/timesigwizard.ui
+++ b/trunk/mscore/mscore/timesigwizard.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>356</width>
-    <height>261</height>
+    <width>613</width>
+    <height>287</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,6 +33,16 @@
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>Time Signature: </string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="tsFraction">
+        <property name="text">
+         <string notr="true"/>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -69,6 +79,20 @@
        <widget class="Awl::DenominatorSpinBox" name="timesigN">
         <property name="maximum">
          <number>32</number>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="tsCutTime">
+        <property name="text">
+         <string notr="true">cut time</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="tsCommonTime">
+        <property name="text">
+         <string notr="true">common time</string>
         </property>
        </widget>
       </item>
