--- a/mscore/mscore/instrwizard.ui
+++ b/mscore/mscore/instrwizard.ui
@@ -183,7 +183,7 @@
       <bool>true</bool>
      </property>
      <property name="columnCount">
-      <number>2</number>
+      <number>3</number>
      </property>
      <column>
       <property name="text">
@@ -193,6 +193,11 @@
      <column>
       <property name="text">
        <string>1</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string notr="true">3</string>
       </property>
      </column>
     </widget>
