--- a/trunk/mscore/mscore/musescore.qrc
+++ b/trunk/mscore/mscore/musescore.qrc
@@ -165,6 +165,7 @@
       <file>data/icons/format_indent_less.svgz</file>
       <file>data/icons/community.svg</file>
       <file>data/icons/metronome.svg</file>
+      <file>data/icons/resetproperty.png</file>
       <file>data/webview.css</file>
 
       <file>data/icons-dark/minus.svg</file>
@@ -284,5 +285,6 @@
       <file>data/icons-dark/format_indent_less.svgz</file>
       <file>data/icons-dark/community.svg</file>
       <file>data/icons-dark/metronome.svg</file>
+      <file>data/icons-dark/resetproperty.png</file>
    </qresource>
 </RCC>
