new feature: grace notes after normal notes

--- a/mscore/mscore/musescore-apple.qrc
+++ b/mscore/mscore/musescore-apple.qrc
@@ -59,6 +59,7 @@
       <file>data/icons/pan.svg</file>
       <file>data/icons/noteentry.svg</file>
       <file>data/icons/grace4.svg</file>
+      <file>data/icons/grace8b.svg</file>
       <file>data/icons/grace16.svg</file>
       <file>data/icons/grace32.svg</file>
       <file>data/icons/keyboard.svg</file>
@@ -179,6 +180,7 @@
       <file>data/icons-dark/pan.svg</file>
       <file>data/icons-dark/noteentry.svg</file>
       <file>data/icons-dark/grace4.svg</file>
+      <file>data/icons-dark/grace8b.svg</file>
       <file>data/icons-dark/grace16.svg</file>
       <file>data/icons-dark/grace32.svg</file>
       <file>data/icons-dark/keyboard.svg</file>
